syntax = "proto3";

package swap;

import "koinos/options.proto";

/*
   @description Create new Swap transaction
   @read-only false
*/
message createSwap_arguments {
  string unlockHash = 1;
  bytes creator = 2 [(koinos.btype) = ADDRESS];
  bytes receiver = 3 [(koinos.btype) = ADDRESS];
  bytes token = 4 [(koinos.btype) = ADDRESS];
  uint64 amount  = 5 [jstype = JS_STRING];
  string id  = 6;
  uint64 lockTime = 7 [jstype = JS_STRING];
}

message createSwap_result {
   string id = 1;
}

/*
   @description Complete a Swap transaction
   @read-only false
*/
message completeSwap_arguments {
  string id = 1;
  string secret = 2;
}

message completeSwap_result {
  bool result = 1;
}

/*
   @description Cancel a Swap transaction
   @read-only false
*/
message cancelSwap_arguments {
  string id = 1;
}

message cancelSwap_result {
  bool result = 1;
}

/*
   @description Get a Swap transaction object
   @read-only true
*/
message getSwap_arguments {
  string id = 1;
}

message getSwap_result {
  string unlockHash = 1;
  bytes creator = 2 [(koinos.btype) = ADDRESS];
  bytes receiver = 3 [(koinos.btype) = ADDRESS];
  bytes token = 4 [(koinos.btype) = ADDRESS];
  uint64 amount  = 5 [jstype = JS_STRING];
  uint64 expiration  = 6 [jstype = JS_STRING];
  uint64 createdAt  = 7 [jstype = JS_STRING];
  bool finalized = 8;
  string id  = 9;
  string secret = 10;
}

//Objects

message swap_object {
  string unlockHash = 1;
  bytes creator = 2 [(koinos.btype) = ADDRESS];
  bytes receiver = 3 [(koinos.btype) = ADDRESS];
  bytes token = 4 [(koinos.btype) = ADDRESS];
  uint64 amount  = 5 [jstype = JS_STRING];
  uint64 expiration  = 6 [jstype = JS_STRING];
  uint64 createdAt  = 7 [jstype = JS_STRING];
  bool finalized = 8;
  string id  = 9;
  string secret = 10;
}

//Events

message create_event {
  string id = 1;
}

message complete_event {
  string id = 1;
  string secret = 2;
}

message cancel_event {
  string id = 1;
}
